--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <header>
     <div class="card">
         <img src="your-photo.jpg" alt="Фото" class="avatar">
-        <h1>Привет! Я - Никита</h1>
+        <h1>Привет! Я - QA Engeener Никита</h1>
         <p style = "font-size: 20px" > QA Engineer Тестировщик ПО </p>  
      <div class="contact-info">
             <p>Телефон: +7 (916) 211-0888</p>
